--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,7 @@
 @if (filteredMonsters().length > 0) {
 <div class="center">Found {{ filteredMonsters().length }} monsters</div>
 }
+<div class="center">
+  <button (click)="addMonster()">Add Generic Monster</button>
+  <br /><br />
+</div>
