--- a/src/app/pages/monster-list/monster-list.component.html
+++ b/src/app/pages/monster-list/monster-list.component.html
@@ -2,15 +2,15 @@
 
 <div id="card-list">
   @for (monster of filteredMonsters(); track monster.name) {
-  <app-playing-card [monster]="monster" />
+    <app-playing-card [monster]="monster" (click)="openMonster(monster)" />
   } @empty {
-  <div class="center">No monster found</div>
+    <div class="center">No monster found</div>
   }
 </div>
 @if (filteredMonsters().length > 0) {
-<div class="center">Found {{ filteredMonsters().length }} monsters</div>
+  <div class="center">Found {{ filteredMonsters().length }} monsters</div>
 }
 <div class="center">
-  <button (click)="addMonster()">Add Generic Monster</button>
+  <button (click)="addMonster()">Add Monster</button>
   <br /><br />
 </div>
